--- a/19-11-5-with-4399.md
+++ b/19-11-5-with-4399.md
@@ -8,45 +8,183 @@
 
 ## 如何理解闭包
 
+个人理解是函数本身以及函数所能访问到的变量的总和
+
 ## 追问 - 闭包的优缺点分别是什么
+
+### 优点
+
+1. 私有化变量
+
+2. 避免全局变量污染
+
+3. 希望一个变量长期存储在内存
+
+### 缺点
+
+1. 会增加内存使用量
+
+2. 使用不当会造成内存泄漏
+
+## js 垃圾回收机制有了解吗 js内存泄漏会在什么时候产生
+
+垃圾回收机制：会周期性自动回收垃圾，防止内存泄漏，对进入环境的变量标记“进入环境”，退出环境的变量标记“退出环境”，自动回收被标记“退出环境”的变量
+
+内存泄漏产生
+
+1. bom dom对象泄漏
+
+2. script 对 dom 和 bom 的引用
+
+3. 闭包函数使用不当
+
+4. addEventListener jQuery的on vue的 $on
+
+5. bom 事件监听 例如websocket
+
+解决内存泄漏 -> [vue cookbook](https://vuejs.bootcss.com/v2/cookbook/avoiding-memory-leaks.html)
 
 ## vue 的生命周期有哪些
 
 ## xss 是什么？攻击获取到的是什么？怎么防范 xss 攻击
 
-## csrf 攻击是什么？原理是什么？
+通过植入恶意代码/flash以获取用户cookie私密网页内容、会话和cookie等各种内容
+
+1. 持久型 最直接的危害类型，跨站代码存储在服务器（数据库）。
+
+2. 反射型 最普遍的类型。用户访问服务器-跨站链接-返回跨站代码。
+
+3. dom型 客户端脚本处理逻辑导致的安全问题。
+
+### 防御措施
+
+充分转义 html 
+
+输入过滤
+
+#### 预防存储型和反射型 XSS 攻击
+
+1. 防止 HTML 中出现注入。
+
+2. 防止 JavaScript 执行时，执行恶意代码。
+
+纯前端渲染
+
+## csrf 攻击是什么？原理是什么
+
+Cross-site request forgery 欺骗用户的浏览器去访问一个自己曾经认证过的网站并运行一些操作（如发邮件，发消息，甚至财产操作如转账和购买商品）。由于浏览器曾经认证过，所以被访问的网站会认为是真正的用户操作而去运行。这利用了web中用户身份验证的一个漏洞：简单的身份验证只能保证请求发自某个用户的浏览器，却不能保证请求本身是用户自愿发出的。
+
+### 防御措施
+
+检查 http 头的 referer 字段 如果是csrf攻击请求 referer 包含的是恶意地址
+
+添加校验 token
+
+### 看这里 [->](https://www.freebuf.com/articles/web/185654.html)
 
 ## 雪碧图有了解过吗？好处有什么
 
+减少请求次数 但是在 http2 多路复用 多张图片可以一个连接通道完成
+
+缺点 高分辨率下图片模糊撕裂 图片合并需要顺序 维护麻烦
+
 ## 雪碧图追问 - http2 已经投入使用了吗
+
+主流还是1.1 但可以启用 http2
 
 ## http 和 https 的区别
 
-## 追问 - https是加一层 ssl 层 具体是怎么实现的
+## 追问 - https 是加一层 ssl 层 具体是怎么实现的
+
+握手需要非对称加密，信息传输需要对称加密 具体实现看[这里](https://segmentfault.com/a/1190000014835279?utm_source=tag-newest)
 
 ## 追问2 - https 建立连接的这个公钥私钥的过程叫什么
+
+非对称加密
 
 ## 对称加密和非对称加密有了解过吗
 
 ## 跨域的方式有哪些
 
+jsonp cors
+
 ## 追问 - jsonp 为什么可以跨域
+
+script跨域特性  - 所以只能get请求
 
 ## 追问 - cors 是什么
 
+Cross-Origin Resource Sharing 是一种允许当前域（domain）的资源（比如html/js/web service）被其他域（domain）的脚本请求访问的机制，通常由于同域安全策略（the same-origin security policy）浏览器会禁止这种跨域请求。
+
+支持get/post/put/delete请求，例如返回Access-Control-Allow-Origin:*,但是不允许自定义header且会忽略cookies，且post数据格式有限制，只支持‘text/plain','application/x-www-urlencoded'and'multipart/form-data'，其中’text/plain'默认支持，后面两种需要下面的预检请求和服务器协商。
+
 ## 前端优化网页的方法有哪些
+
+1. js html css 压缩文件
+
+2. 图片的压缩 - base64 格式可以减少请求数量但是体积增大 （8位表示6位
+
+3. 使用 字体图标 iconfont 代替图片
+
+4. 减少重定向
+
+5. 使用缓存
+
+6. 减少使用 css 的 @import
+
+7. 避免空src href
+
+8. cdn 引入依赖
+
+9. gzip
+
+10. 按需加载依赖
+
+11. dns预解析
+
+12. 苏菲本的收藏夹
 
 ## MySQL 和 mongoDB 的区别有哪些
 
-## 后端平时有在写码
+关系型数据库  和 非~ （noSQL 
+
+前者
+
+1. 缺点 - 在海量数据处理的时候效率会显著变慢。
+
+2. 体系成熟 传统查询语句
+
+3. 不同引擎有不同存储方式
+
+后者
+
+1. 快速 将读取较多的数据放入物理内存 高速读写
+
+2. json存储格式
+
+3. 缺点 - 无事务机制
 
 ## 如何使用 localStorage 实现类似于 cookie 的过期功能。 提示 - 可不可以加入时间戳
 
-## 如何有利于搜索引擎 SEO 
+见苏菲收藏夹
+
+## 如何有利于搜索引擎 SEO
+
+1. 减少使用 iframe
+
+2. html 语义化标签
+
+3. 设置关键词
+
+4. 数据不要用json解析
+
+5. 目录层级减少
 
 ## nlogn 的排序算法说两种
 
 ## 追问 - 快排需要多大的额外空间
+
+普通快排原地修改 O(1) 三路快排 O(N)  待补充
 
 ---
 
